@@ -513,8 +513,13 @@ void DefaultGui::saveConfig() {
 
 	set->beginGroup( "default_gui");
 
-	set->setValue( "floating_control_width", floating_control_width );
+	set->setValue("floating_control_width", floating_control_width );
 	set->setValue("floating_control_animated", floating_control_animated);
+
+	set->setValue("fullscreen_toolbar1_was_visible", fullscreen_toolbar1_was_visible);
+	set->setValue("fullscreen_toolbar2_was_visible", fullscreen_toolbar2_was_visible);
+	set->setValue("compact_toolbar1_was_visible", compact_toolbar1_was_visible);
+	set->setValue("compact_toolbar2_was_visible", compact_toolbar2_was_visible);
 
 	if (pref->save_window_size_on_exit) {
 		qDebug("DefaultGui::saveConfig: w: %d h: %d", width(), height());
@@ -538,6 +543,11 @@ void DefaultGui::loadConfig() {
 
 	floating_control_width = set->value( "floating_control_width", floating_control_width ).toInt();
 	floating_control_animated = set->value("floating_control_animated", floating_control_animated).toBool();
+
+	fullscreen_toolbar1_was_visible = set->value("fullscreen_toolbar1_was_visible", fullscreen_toolbar1_was_visible).toBool();
+	fullscreen_toolbar2_was_visible = set->value("fullscreen_toolbar2_was_visible", fullscreen_toolbar2_was_visible).toBool();
+	compact_toolbar1_was_visible = set->value("compact_toolbar1_was_visible", compact_toolbar1_was_visible).toBool();
+	compact_toolbar2_was_visible = set->value("compact_toolbar2_was_visible", compact_toolbar2_was_visible).toBool();
 
 	if (pref->save_window_size_on_exit) {
 		int x = set->value( "x", this->x() ).toInt();
